// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly 1`] = `
<div>
  <ButtonLink
    className="little-spacer-bottom"
    onClick={[Function]}
  >
    system.show_intermediate_versions
    <DropdownIcon
      className="little-spacer-left"
      turned={false}
    />
  </ButtonLink>
</div>
`;

exports[`should display correctly 2`] = `
<div>
  <ButtonLink
    className="little-spacer-bottom"
    onClick={[Function]}
  >
    system.hide_intermediate_versions
    <DropdownIcon
      className="little-spacer-left"
      turned={true}
    />
  </ButtonLink>
  <div
    className="note system-upgrade-intermediate"
    key="5.6.6"
  >
    <DateFormatter
      date="2017-04-02"
      long={true}
    >
      <Component />
    </DateFormatter>
    <p
      className="little-spacer-top"
    >
      Version 5.6.6 description
    </p>
  </div>
  <div
    className="note system-upgrade-intermediate"
    key="5.6.5"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <p
      className="little-spacer-top"
    >
      Version 5.6.5 description
    </p>
  </div>
</div>
`;
